--- a/src/components/elements/Input/Input.module.css
+++ b/src/components/elements/Input/Input.module.css
@@ -1,16 +1,21 @@
 .input{
    outline: transparent;
    transition: all 0.25s ease;
-}
-
-.mainPageInput{
-   box-sizing: border-box;
-   width: 100%;
    height: 44px;
-   background: rgba(0, 0, 0, 0.04);
+   width: 100%;
+   box-sizing: border-box;
+   border-radius: 4px;
    border: 1px solid rgba(0, 0, 0, 0.16);
    border-radius: 4px;
    padding: 12px;
    color: rgba(0, 0, 0, 0.48);
    outline: none;
+}
+
+.mainPageInput{   
+   background: rgba(0, 0, 0, 0.04);
+}
+
+.formsInput{
+   background: #FFFFFF;     
 }
