--- a/src/containers/create/SecondFrom/SecondForm.module.css
+++ b/src/containers/create/SecondFrom/SecondForm.module.css
@@ -22,7 +22,9 @@
    background: #FFFFFF;
    border: 1px solid rgba(0, 0, 0, 0.16);
    border-radius: 4px;
-
+   color: rgba(0, 0, 0, 0.48);
+   font-family: SB Sans Interface;
+   outline: none;
 }
 
 .advantagesContainer{
