--- a/src/containers/modals/successfulRequestModal/successfulRequestModal.module.css
+++ b/src/containers/modals/successfulRequestModal/successfulRequestModal.module.css
@@ -51,3 +51,9 @@
    display: flex;
    justify-content: center;
 }
+
+@media (max-width:500px){
+   .requestContainer{
+      width: 100%;
+   }
+}
